--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -1,19 +1,9 @@
-facebook:
-  label: Facebook
-  permalink: /facebook
-  description: Facebook tag description
+sslc:
+  label: SSLC
+  permalink: /sslc
+  description: SSLC-related news
 
-hello:
-  label: Hello
-  permalink: /hello
-  description: Hello tag description
-
-docusaurus:
-  label: Docusaurus
-  permalink: /docusaurus
-  description: Docusaurus tag description
-
-hola:
-  label: Hola
-  permalink: /hola
-  description: Hola tag description
+study-tips:
+  label: Study Tips
+  permalink: /study-tips
+  description: Tips for studying
